blg438e/Deney0/C5515_Support_Files/C5515_Lib/dsplib_2.40.00/EXAMPLES/neg/t1.h
/* This is a test for neg: tst1 */
#define NX 4
#define FNAME "t1"
#define MAXERROR 10

DATA x[NX] ={
3276,
6553,
32767,
9830,
};

DATA rtest[NX] ={
-3277,
-6554,
-32768,
-9830,
};

DATA r[NX]; 
